TD2/exec-liveness.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: registry.k8s.io/busybox:1.27.2
    startupProbe:
      exec:
        command:
        - sh
        - -c
        - mysqladmin ping -h localhost --protocol=tcp -u root -p${MYSQL_ROOT_PASSWORD} | grep alive
      initialDelaySeconds: 30
      failureThreshold: 30
    livenessProbe:
      exec:
        command:
        - sh
        - -c
        - mysqladmin ping -h localhost --protocol=tcp -u root -p${MYSQL_ROOT_PASSWORD} | grep alive
      initialDelaySeconds: 35
      periodSeconds: 10
      failureThreshold: 3
