TD2/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:latest
        name: registry
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-pv-claim
