TD2/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: 127.0.0.1:30500/todo:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
        - containerPort: 5701
