TD2/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30500 #the difference between port and nodePort is that port is the port on which the service is exposed inside the cluster, while nodePort is the port on which the service is exposed outside the cluster. By specifying a nodePort, you can access the service from outside the cluster using the IP address of any node and the specified nodePort.
  selector:
    app: registry
