TD2/todo-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-headless
spec:
  clusterIP: None
  ports:
  - protocol: TCP
    port: 5701
    targetPort: 5701
    name: hazelcast
  selector:
    app: todo
