TD2/todo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # 3 hours - maintains sticky session
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: todo
